force-app/main/default/objects/Store_Type__c/Store_Type__c.object-meta.xml
<CustomObject>
    <label>Store Type</label>
    <nameField>
        <displayFormat>ST{00}</displayFormat>
        <label>Store Type ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>