force-app/main/default/objects/Store_Type__c/fields/AltCode__c.field-meta.xml
<CustomField>
    <fullName>AltCode__c</fullName>
    <formula>RIGHT(Name , LEN(Name)-2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AltCode</label>
    <type>Text</type>
</CustomField>