force-app/main/default/objects/Store_Type__c/fields/Display_Description__c.field-meta.xml
<CustomField>
    <fullName>Display_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Display Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>