force-app/main/default/objects/Store_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FeedSend__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Display_Description__c</columns>
    <columns>isActive__c</columns>
    <columns>AltCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>